...
        }
    }
    
    var body: some View {
        NavigationStack {
            Form {
                TextField("Title", text: $title)
                DatePicker("Deadline", selection: $dueDate)
                Stepper(value: $remindBefore, in: 0...1440, step: 5) {
                    Text("Напомнить за \(remindBefore) минут")
                }
                if let edit = deadlineToEdit {
                    TodoListView(deadline: edit, viewModel: viewModel)
                }

            }
            .navigationTitle(deadlineToEdit == nil ? "New Deadline" : "Edit Deadline")
            .toolbar {
                ToolbarItem(placement: .confirmationAction) {
                    Button("Save") {
                        if let edit = deadlineToEdit {
                            viewModel.updateDeadline(edit, title: title, dueDate: dueDate, remindBefore: remindBefore)
                        } else {
                            viewModel.addDeadline(title: title, dueDate: dueDate, remindBefore: remindBefore)
                        }
                        dismiss()
...
